[tool.poetry]
name = "qc_comfyui_bizyair"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "*"
torchsde = "*"
torchvision = "*"
torchaudio = "*"
numpy = "^1.25.0"
einops = "*"
transformers = "^4.28.1"
tokenizers = "^0.13.3"
sentencepiece = "*"
safetensors = "^0.4.2"
aiohttp = "^3.11.8"
yarl = "^1.18.0"
pyyaml = "*"
Pillow = "*"
scipy = "*"
tqdm = "*"
psutil = "*"
kornia = "^0.7.1"
spandrel = "*"
soundfile = "*"
av = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
